food component updated

--- a/Food/indexx.css
+++ b/Food/indexx.css
@@ -61,19 +61,18 @@ body {
   }
   
 
-  .card-text{
-    white-space: nowrap;
+
+  .desc-text{
     overflow: hidden;
     text-overflow: ellipsis;
-    
+    display: -webkit-box ;
+    -webkit-line-clamp: 3; /* Limit to 3 lines */
+    -webkit-box-orient: vertical;
   }
+
   #toggleButton {
     display: block;
   }
   
 
-  .truncate {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
+ 
