--- a/Food/indexx.css
+++ b/Food/indexx.css
@@ -56,17 +56,12 @@ body {
 
 
 
-  .header-img{
-    height: 230px;
-  }
-  
-
-
   .desc-text{
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box ;
-    -webkit-line-clamp: 3; /* Limit to 3 lines */
+    display: flex;
+    -webkit-line-clamp: 3 ; /* Limit to 3 lines */
     -webkit-box-orient: vertical;
   }
 
