added sweet alert

--- a/Food/indexx.css
+++ b/Food/indexx.css
@@ -55,8 +55,8 @@ body {
 
 
 
-
   .desc-text{
+    text-align: justify;
     overflow: hidden;
     text-overflow: ellipsis;
     display: -webkit-box ;
